- Partial   * little changes in form partial
- View
  * adding some new text

- Locales
  * add new translation

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -7,22 +7,22 @@
     </p>
      <% content_tag :div, :id => 'quarter'  do %>
        <%= t('company.street') %>
-       <%= f.text_field :street, :value => '-' %>
+       <%= f.text_field :street %>
 
        <%= content_tag('br') %>
 
        <%= t('company.number') %>
-       <%= f.text_field :number, :value => 0 %>
+       <%= f.text_field :number %>
 
        <%= content_tag('br') %>
 
        <%= t('company.city') %>
-       <%= f.text_field :city, :value => '-' %>
+       <%= f.text_field :city %>
 
        <%= content_tag('br') %>
 
        <%= t('company.contact') %>
-       <%= f.text_field :contact, :value => '-' %>
+       <%= f.text_field :contact %>
 
        <%= content_tag('br') %>
 
