--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -4,7 +4,7 @@
 <% content_tag :p do %>
   * <%= t('help_phrases.msg_text') %>
   <%= content_tag('br') %>
-  * <%= t('help_phrases.msg_number') %>
+  ** <%= t('help_phrases.msg_number') %>
 <% end %>
 
 <%= link_to t('common_actions.back'), companies_path %>
