- Helper   * refactoring and little changes of front_end_pages     method to show or not front pages
- Partials
  * added new field 'frontend' to form partial
  * added value in list pages

- Migrate
  * added new migration to add frontend field in
    pages table

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -19,6 +19,11 @@
     <%#= f.text_area :content, :cols => 80, :rows => 15 %>
   <% end %>
 
+  <% content_tag :p do %>
+      <%= f.label :frontend %><br />
+      <%= f.check_box :frontend %>
+  <% end %>
+
   <% if action_name == 'new' %>
   <%= f.submit t('bill.create') %>
   <% else %>
