- Controller   * refactoring moving 'models' method     to application helper
- Helper
  * modified and fixed 'select_models' helper

- Fixtures
  * fixed

--- a/app/views/harddisks/_models.html.erb
+++ b/app/views/harddisks/_models.html.erb
@@ -1,7 +1,2 @@
-<% content_tag :div, :id => "quarter" do %>
-<select name='harddisk[model_id]'>
-<% for model in @models %>
-    <option value="<%= model.id %>"><%= model.description %></option>
-<% end %>
-</select>
-<% end -%>
+<%= select_models(@models, 'harddisk[model_id]') %>
+
