--- a/app/views/mother_boards/_models.html.erb
+++ b/app/views/mother_boards/_models.html.erb
@@ -1,7 +1,1 @@
-<% content_tag :div, :id => "quarter" do %>
-<select name='mother_board[model_id]'>
-<% for model in @models %>
-    <option value="<%= model.id %>"><%= model.description %></option>
-<% end %>
-</select>
-<% end -%>
+<%= select_models(@models, 'mother_board[model_id]') %>
