--- a/app/views/harddisks/show.html.erb
+++ b/app/views/harddisks/show.html.erb
@@ -7,7 +7,7 @@
 <%= content_tag('p',@harddisk.mark.name) %>
 
 <%= content_tag('h4', t('harddisks.model')) %>
-<%= content_tag('p',@harddisk.model) %>
+<%= content_tag('p',@harddisk.model.description) %>
 
 <%= content_tag('h4',t('harddisks.sn')) %>
 <%= content_tag('p',@harddisk.serialnumber) %>
