--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -14,9 +14,6 @@
 <% form_for(@memory) do |f| %>
 <%= f.error_messages %>
 
-<%= f.label 'model' %>
-<%= f.text_field :model %>
-
 <% 2.times do %>
 <br>
 <%  end %>
@@ -56,6 +53,14 @@ Mark:
 <%= collection_select 'memory', 'mark_id', Mark.find(:all), 'id', 'name',
     {:prompt => true} %>
 <% end -%>
+
+<%= observe_field "memory_mark_id", :update => "model_id_container",
+:with => "mark_id", :url => { :controller => "memories",
+:action => "models" } %>
+
+Modelo
+<div id="model_id_container">
+</div>
 
 <div id="quarter" >
   <%= t 'menu.bills' %><%= t 'bill.code' %>
