--- a/app/views/marks/_list.html.erb
+++ b/app/views/marks/_list.html.erb
@@ -6,6 +6,7 @@
 <% for mark in @marks %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <%= content_tag('td', mark.name) %>
+    <%= content_tag('td',link_to(t('common_actions.show'), mark)) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_mark_path(mark))) %>
     <%= content_tag('td', link_to(t('common_actions.destroy'), mark, :confirm => 'Are you sure?', :method => :delete)) %>
   </tr>
