--- a/app/views/marks/show.html.erb
+++ b/app/views/marks/show.html.erb
@@ -1,3 +1,17 @@
+<% content_tag :h4  do %>
+  <%= t('menu.marks').singularize  %>
+<% end %>
+<% content_tag :h2  do %>
+  <%= @mark.name  %>
+<% end %>
+<%=content_tag('br') %>
+
+<% content_tag :h4  do %>
+  <%= t('menu.models')  %>
+<% end %>
+
+<%= models(@mark) %>
+<%=content_tag('br') %>
 
 <%= link_to t('common_actions.edit'), edit_mark_path(@mark) %> |
 <%= link_to t('common_actions.back'), marks_path %>
