--- a/app/views/marks/show.html.erb
+++ b/app/views/marks/show.html.erb
@@ -7,7 +7,7 @@
 <%=content_tag('br') %>
 
 <% if not @mark.model.empty? %>
-  <% content_tag :h4  do %>
+  <% content_tag :div  do %>
     <%= t('menu.models')  %>
   <% end %>
 <% end %>
