--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -1,7 +1,7 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th', t('memories.sn'), options = {:nowrap => true}) %>
-    <%= content_tag('th', t('memories.mark')) %>
+    <%= content_tag('th', t('memories.mark') + ' / ' + t('memories.model')) %>
     <%= content_tag('th', t('memories.model')) %>
     <%= content_tag('th', t('memories.size'), options = {:colspan => 2}) %>
     <%= content_tag('th', 'Pc') %>
@@ -11,7 +11,6 @@
 <% for memory in @memories %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <%= content_tag('td', memory.serialnumber, options = {:nowrap => true}) %>
-    <%= content_tag('td', memory.mark.name, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.model_id.nil? ? '-' : memory.model.description, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.size, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.unit.to_s, options = {:nowrap => true}) %>
