--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -1,7 +1,7 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th',t('motherboards.sn'), options = {:nowrap => true}) %>
-    <%= content_tag('th',t('motherboards.mark')) %>
+    <%= content_tag('th', t('motherboards.mark') + ' / ' + t('motherboards.model')) %>
     <%= content_tag('th',t('motherboards.model')) %>
     <%= content_tag('th','Pc') %>
     <%= content_tag('th', t('motherboards.bill')) %>
@@ -11,7 +11,7 @@
    <% for mother_board in @mother_boards %>
      <tr  class="<%= cycle("rowA","rowB") %>">
        <%= content_tag('td',mother_board.serialnumber, options = {:nowrap => true}) %>
-       <%= content_tag('td',mother_board.mark.name, options = {:nowrap => true})%>
+    <%= content_tag('td', mother_board.model_id.nil? ? '-' : mother_board.description_model, options = {:nowrap => true}) %>
        <%= content_tag('td',mother_board.model_id.nil? ? '-' : mother_board.model.description, options = {:nowrap => true}) %>
        <%= content_tag('td',mother_board.computer.nil? ? '-': link_to(mother_board.computer.name , '/computers/' +
            mother_board.computer.id.to_s), options = {:nowrap => true}) %>
