--- a/app/views/cds/_list.html.erb
+++ b/app/views/cds/_list.html.erb
@@ -10,7 +10,7 @@
 <% for cd in @cds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <%= content_tag('td', cd.serialnumber, options = {:nowrap => true}) %>
-    <%= content_tag('td', cd.model_id.nil? ? '-' : cd.model.description, options = {:nowrap => true}) %>
+    <%= content_tag('td', cd.model_id.nil? ? '-' : cd.description_model, options = {:nowrap => true}) %>
     <%= content_tag('td', check(cd.writable)) %>
     <%= content_tag('td', link_to(cd.computer.name , 'computers/' + cd.computer.id.to_s),
         options = {:nowrap => true})  rescue nil %>
