--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -1,8 +1,8 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th', t('harddisks.sn'), options = {:nowrap => true}) %>
-    <%= content_tag('th', t('harddisks.mark')) %>
-    <%= content_tag('th','model') %>
+    <%= content_tag('th', t('harddisks.mark') + ' / ' + t('harddisks.model'),
+        options = {:nowrap => true}) %>
     <%= content_tag('th', t('harddisks.size'), options = {:colspan => 2}) %>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', t('harddisks.bill')) %>
@@ -12,8 +12,7 @@
 <% for harddisk in @harddisks %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <%= content_tag('td',harddisk.serialnumber, options = {:nowrap => true}) %>
-    <%= content_tag('td',harddisk.mark.nil? ? '-' : harddisk.mark.name , options = {:nowrap => true})  %>
-    <%= content_tag('td',harddisk.model_id.nil? ? '-' : harddisk.model.description , options = {:nowrap => true})  %>
+    <%= content_tag('td', harddisk.model_id.nil? ? '-' : harddisk.description_model, options = {:nowrap => true}) %>
     <%= content_tag('td',harddisk.size, options = {:nowrap => true}) rescue nil  %>
     <%= content_tag('td',harddisk.unit.nil? ? '-' : harddisk.unit.to_s,
         options = {:nowrap => true})  %>
