- View   * adding translation

--- a/app/views/places/list.html.erb
+++ b/app/views/places/list.html.erb
@@ -6,5 +6,5 @@
 <%= render :partial => 'list' %>
 <br />
 
+<%= link_to  t('places.new'), new_place_path %>
 
-<%= link_to 'New place', new_place_path %>
