--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -31,8 +31,19 @@ Not burn<%= radio_button('cd', 'writable', 'f') %>
 <%= collection_select 'cd', 'computer_id', Computer.find(:all), 'id', 'name',
     {:prompt => true} %>
 
+<% content_tag :div, :id => "quarter" do %>
+Mark:
 <%= collection_select 'cd', 'mark_id', Mark.find(:all), 'id', 'name',
     {:prompt => true} %>
+<% end -%>
+
+<%= observe_field "cd_mark_id", :update => "model_id_container",
+:with => "mark_id", :url => { :controller => "cds",
+:action => "models" } %>
+
+Modelo
+<div id="model_id_container">
+</div>
 
 <div id="quarter" >
   <%= t 'bill.code' %>
