--- a/app/views/dvds/_form.html.erb
+++ b/app/views/dvds/_form.html.erb
@@ -30,8 +30,19 @@ Not burn<%= radio_button('dvd', 'writable', 'f') %>
 <%= collection_select 'dvd', 'computer_id', Computer.find(:all), 'id', 'name',
     {:prompt => true} %>
 
+<% content_tag :div, :id => "quarter" do %>
+Mark:
 <%= collection_select 'dvd', 'mark_id', Mark.find(:all), 'id', 'name',
     {:prompt => true} %>
+<% end -%>
+
+<%= observe_field "dvd_mark_id", :update => "model_id_container",
+:with => "mark_id", :url => { :controller => "dvds",
+:action => "models" } %>
+
+Modelo
+<div id="model_id_container">
+</div>
 
 <div id="quarter" >
   <%= t 'bill.code' %>
