--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -24,32 +24,59 @@
 <%= t('cds.inventory_register') %>
 <%= f.text_field :inventory_register %>
 
+<% 2.times do %>
+<br>
+<% end %>
+
 Burn <%= radio_button('cd', 'writable', 't') %>
 Not burn<%= radio_button('cd', 'writable', 'f') %>
 
+<% 2.times do %>
+<br>
+<% end %>
 
+Pc
+<% content_tag :div, :id => "quarter" do %>
 <%= collection_select 'cd', 'computer_id', Computer.find(:all), 'id', 'name',
     {:prompt => true} %>
+<% end -%>
+
+<% 2.times do %>
+<br>
+<% end %>
 
 <% content_tag :div, :id => "quarter" do %>
-Mark:
+<%= t('cds.mark') %>
 <%= collection_select 'cd', 'mark_id', Mark.find(:all), 'id', 'name',
     {:prompt => true} %>
 <% end -%>
+
+<% 2.times do %>
+<br>
+<% end %>
 
 <%= observe_field "cd_mark_id", :update => "model_id_container",
 :with => "mark_id", :url => { :controller => "cds",
 :action => "models" } %>
 
-Modelo
+<%= t('cds.model') %>
 <div id="model_id_container">
 </div>
+
+<% 2.times do %>
+<br>
+<% end %>
 
 <div id="quarter" >
   <%= t 'bill.code' %>
   <%= collection_select 'cd', 'bill_id', Bill.find(:all), 'id', :company_bill,
       {:prompt => true} %>
 </div >
+
+<% 2.times do %>
+<br>
+<% end %>
+
 <p>
   <% if action_name == 'new' %>
   <%= f.submit t('common_actions.create') %>
