--- a/app/views/cds/new.html.erb
+++ b/app/views/cds/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.cds').singularize ) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to t('common_actions.back'), cds_path %>
