--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -14,10 +14,6 @@
 <% form_for(@memory) do |f| %>
 <%= f.error_messages %>
 
-<% 2.times do %>
-<br>
-<%  end %>
-
 <%= f.label 'serialnumber' %>
 <%= f.text_field :serialnumber %>
 
@@ -41,32 +37,50 @@
 <% 2.times do %>
 <br>
 <%  end %>
+
 <% content_tag :div, :id => "quarter" do %>
 
-Computer:
+Pc:
 <%= collection_select 'memory', 'computer_id', Computer.find(:all), 'id', 'name',
     {:prompt => true} %>
 <% end -%>
 
+<% 2.times do %>
+<br>
+<%  end %>
+
+
 <% content_tag :div, :id => "quarter" do %>
-Mark:
+<%= t('memories.mark') %>
 <%= collection_select 'memory', 'mark_id', Mark.find(:all), 'id', 'name',
     {:prompt => true} %>
 <% end -%>
+
+<% 2.times do %>
+<br>
+<%  end %>
 
 <%= observe_field "memory_mark_id", :update => "model_id_container",
 :with => "mark_id", :url => { :controller => "memories",
 :action => "models" } %>
 
-Modelo
+<%= t('memories.model') %>
 <div id="model_id_container">
 </div>
+
+<% 2.times do %>
+<br>
+<%  end %>
 
 <div id="quarter" >
   <%= t 'menu.bills' %><%= t 'bill.code' %>
   <%= collection_select 'memory', 'bill_id', Bill.find(:all), 'id', :company_bill,
       {:prompt => true} %>
 </div >
+
+<% 2.times do %>
+<br>
+<% end %>
 
 <p>
   <% if action_name == 'new' %>
