--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.memories').singularize ) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to t('common_actions.back'), memories_path %>
