--- a/app/views/dvds/new.html.erb
+++ b/app/views/dvds/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.dvds').singularize ) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to t('common_actions.back'), dvds_path %>
