--- a/app/views/screens/new.html.erb
+++ b/app/views/screens/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.screens') ) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to t('common_actions.back'), screens_path %>
