--- a/app/views/printers/new.html.erb
+++ b/app/views/printers/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.printers').singularize ) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to t('common_actions.back'), printers_path %>
