--- a/app/views/mother_boards/new.html.erb
+++ b/app/views/mother_boards/new.html.erb
@@ -1,3 +1,5 @@
+<%= content_tag('h3',t('menu.motherboards').singularize) %>
+
 <%= render :partial => 'form' %>
 
 <%= link_to   t('common_actions.back'), mother_boards_path %>
