- Public images   * added three new public images
- View
  * little changes

- Styles
  * adding styles

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -655,7 +655,7 @@ div.auto_complete ul strong.highlight {
 .background_frontend
 {
     border: 1px solid #000;
-    background-color: #8A4B08;
+    background-color: #151515;
     color: #fff;
     width: 70%;
 }
